[package]
name = "rs-car"
version = "0.4.1"
edition = "2021"
description = "Rust implementation of the CAR v1 and v2 specifications"
keywords = ["ipfs", "ipld", "car"]
repository = "https://github.com/dapplion/rs-car"
documentation = "https://docs.rs/rs-car"
authors = ["dapplion <dapplion@chainsafe.io>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "rs_car"
path = "src/lib.rs"

[dependencies]
futures = "0.3.26"
libipld = { version = ">=0.14, <0.17", default-features = false, features = ["dag-cbor"] }
blake2b_simd = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
hex = "0.4.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
