[package]
name = "rs-car"
version = "0.5.0"
edition = "2021"
description = "Rust implementation of the CAR v1 and v2 specifications"
keywords = ["ipfs", "ipld", "car"]
repository = "https://github.com/dapplion/rs-car"
documentation = "https://docs.rs/rs-car"
authors = ["dapplion <dapplion@chainsafe.io>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "rs_car"
path = "src/lib.rs"

[dependencies]
blake2b_simd = { version = "1", default-features = false }
futures = "0.3"
ipld-core = { version = "0.4" }
serde_ipld_dagcbor = { version = "0.6" }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
hex = "0.4"
quickcheck = "1"
quickcheck_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
